Fixed Mobile Nav z-index Issue

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ body {
    position: absolute;
    top: 0;
    left: 0;
+   z-index: 999;
 }
 #primary-nav .container-fluid {
     padding: 1.5em 3vw;
